Fixing Spacing

--- a/assets/css/override.css
+++ b/assets/css/override.css
@@ -205,8 +205,8 @@ img {
 
 body {
     font-family: "Inter", sans-serif;
-    font-size: 1.01em;
-    line-height: 1.25em;
+    font-size: 1em;
+    line-height: 1.62em;
     letter-spacing: 0.03em;
     color: #333;
 }
